syntax = "proto3";

package helloworld;

option go_package = "./proto;helloworld";

service Helloworld {
	rpc Call(Request) returns (Response) {};
	rpc Stream(StreamRequest) returns (stream StreamResponse) {};
}

// Call returns a personalised "Hello $name" response
message Request {
	string name = 1;
}

message Response {
	string message = 1;
}

// Stream returns a stream of "Hello $name" responses
message StreamRequest {
	string name = 1;
	// the number of messages to send back
	int64 messages = 2;
}

message StreamResponse {
	string message = 1;
}
